# llm-terminal-manual-hash-RAG-context

./: .gitignore  README.md  license.md  package.json
renderer/: app.js  index.html  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
