[package]
name = "llm-terminal"
version = "1.0.0"
edition = "2021"

[package.metadata.bundle]
identifier = "com.llmterminal.app"
icon = ["icons/icon.ico"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
